fixed wrapping issue with spectator box

--- a/overlay.css
+++ b/overlay.css
@@ -121,7 +121,7 @@ body {
 #specPlayerName {
     font-size: 20pt;
     margin-top: -0.75rem;
-    margin-left: 15px;
+    margin-left: 25px;
 }
 
 #specPlayerBar {
